--- a/public/style.css
+++ b/public/style.css
@@ -4,11 +4,15 @@
 }
 h1 {
     text-align: center;
-    background-color: #888;
+    background-color: rgb(45, 87, 155);
     color: #fff;
+    font-size: 5vw;
 }
 form {
     display: flex;
+}
+#form {
+    display: none;
 }
 input,
 button
@@ -33,12 +37,34 @@ button
 #chats
 {
     font-size:5vw;
-    margin:0;
-    padding: 0;
-    text-indent: 0;
 }
-#chats li 
+#chats dt
 {
-    margin-left:1em;
-    text-indent: 0;
+    margin: 2vw 0;
+    border:1px solid #333;
+    border-radius:3vw;
+    padding:1vw 3vw;
+    display: inline-block;
 }
+#chats dt+dd
+{
+    margin-left: 8vw;
+    position: relative;
+    background-color:#ccc;
+    border-radius:3vw;
+    padding:1vw 3vw;
+}
+#chats dt+dd::before
+{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: -6vw;
+    margin-top: -7vw;
+    border: 3vw solid transparent;
+    border-right: 8vw solid #ccc;
+    transform: rotate(40deg);
+    z-index: -1;
+}
+
