--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
 }
 h1 {
     text-align: center;
-    background-color: rgb(45, 87, 155);
+    background: color #008080;
     color: #fff;
     font-size: 5vw;
 }
