--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
 }
 h1 {
     text-align: center;
-    background: color #008080;
+    background-color: rgb(30, 228, 106) ;
     color: #fff;
     font-size: 5vw;
 }
